Fixed z-index

--- a/index-stylesheet.css
+++ b/index-stylesheet.css
@@ -20,6 +20,7 @@ body {
     left:0;
     right: 0;
     text-align: center;
+    z-index: 10;
 }
 
 .title {
@@ -44,6 +45,8 @@ body {
     width: 100%;
     flex-wrap: wrap;
     padding: 20px 0 50px;
+    position: relative;
+    z-index: 1;
 }
 
 .recipe {
@@ -93,6 +96,7 @@ img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 }
 
 a {
